fix toList() call
not supported in java 8